deploy/infrawriter/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infrawriter
  namespace: infrawriter
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: infrawriter.hermes.ranabo.com
    external-dns.alpha.kubernetes.io/target: hermes.ranabo.com
spec:
  ingressClassName: nginx
  rules:
    - host: infrawriter.hermes.ranabo.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: infrawriter-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infrawriter-frontend
                port:
                  name: http
  tls:
    - hosts:
        - infrawriter.hermes.ranabo.com
      secretName: hermes-wildcard-tls
